--- a/style.css
+++ b/style.css
@@ -24,3 +24,11 @@ h1 {
     display: flex;
     flex-direction: column;
 }
+
+input {
+    margin-top: 10px;
+}
+
+.addOption {
+    margin-top: 10px;
+}
